--- a/writeup/references.bib
+++ b/writeup/references.bib
@@ -820,3 +820,27 @@
 	       key cryptosystem, is presented.}, journal = {Commun. ACM}, month = {jun}
 	       , pages = {637–647}, numpages = {11} },
 }
+
+@article{shamir-1992,
+	author = {Shamir, Adi},
+	title = {IP = PSPACE},
+	year = {1992},
+	issue_date = {Oct. 1992},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	volume = {39},
+	number = {4},
+	issn = {0004-5411},
+	url = {https://doi.org/10.1145/146585.146609},
+	doi = {10.1145/146585.146609},
+	abstract = {In this paper, it is proven that when both randomization and
+	            interaction are allowed, the proofs that can be verified in
+	            polynomial time are exactly those proofs that can be generated with
+	            polynomial space.},
+	journal = {J. ACM},
+	month = {oct},
+	pages = {869–877},
+	numpages = {9},
+	keywords = {IP, PSPACE, interactive proofs},
+}
+
