add deterministic computation

--- a/writeup/prelude.tex
+++ b/writeup/prelude.tex
@@ -76,6 +76,7 @@
 
 % quality of life
 \renewcommand{\emptyset}{\varnothing}
+\newcommand{\denote}[1]{\llbracket #1 \rrbracket}
 
 % diagrams
 \newcommand{\punctuation}[1]{\makebox[0pt][l]{#1}}
