--- a/writeup/references.bib
+++ b/writeup/references.bib
@@ -844,3 +844,275 @@
 	keywords = {IP, PSPACE, interactive proofs},
 }
 
+
+@inproceedings{abramsky-coecke-2004,
+	author = {Abramsky, S. and Coecke, B.},
+	booktitle = {Proceedings of the 19th Annual IEEE Symposium on Logic in
+	             Computer Science, 2004.},
+	title = {A categorical semantics of quantum protocols},
+	year = {2004},
+	volume = {},
+	number = {},
+	pages = {415-425},
+	keywords = {Protocols;Teleportation;Performance evaluation;Quantum
+	            computing;Quantum entanglement;Quantum
+	            mechanics;Laboratories;Communication channels;Force
+	            measurement;Measurement standards},
+	doi = {10.1109/LICS.2004.1319636},
+}
+
+@article{heunen-vicary-2014,
+	title = {Introduction to categorical quantum mechanics},
+	author = {Heunen, Chris and Vicary, Jamie},
+	journal = {preprint},
+	year = {2014},
+	url = {
+	       https://www.cs.ox.ac.uk/people/jamie.vicary/IntroductionToCategoricalQuantumMechanics.pdf
+	       },
+}
+
+@inproceedings{hines-2020,
+	author = "Hines, Peter M.",
+	editor = "Eades III, Harley and Gadyatskaya, Olga",
+	title = "A Diagrammatic Approach to Information Flow in Encrypted
+	         Communication",
+	booktitle = "Graphical Models for Security",
+	year = "2020",
+	publisher = "Springer International Publishing",
+	address = "Cham",
+	pages = "166--185",
+	abstract = "We give diagrammatic tools to reason about information flow within
+	            encrypted communication. In particular, we are interested in
+	            deducing where information flow (communication or otherwise) has
+	            taken place, and fully accounting for all possible paths.",
+	isbn = "978-3-030-62230-5",
+}
+
+
+@inproceedings{pavlovic-2012,
+	author = "Pavlovic, Dusko",
+	editor = "Pattinson, Dirk and Schr{\"o}der, Lutz",
+	title = "Tracing the Man in the Middle in Monoidal Categories",
+	booktitle = "Coalgebraic Methods in Computer Science",
+	year = "2012",
+	publisher = "Springer Berlin Heidelberg",
+	address = "Berlin, Heidelberg",
+	pages = "191--217",
+	abstract = "Man-in-the-Middle (MM) is not only a ubiquitous attack pattern in
+	            security, but also an important paradigm of network computation and
+	            economics. Recognizing ongoing MM-attacks is an important security
+	            task; modeling MM-interactions is an interesting task for semantics
+	            of computation. Traced monoidal categories are a natural framework
+	            for MM-modelling, as the trace structure provides a tool to hide
+	            what happens in the middle. An effective analysis of what has been
+	            traced out seems to require an additional property of traces,
+	            called normality. We describe a modest model of network computation
+	            , based on partially ordered multisets (pomsets), where basic
+	            network interactions arise from the monoidal trace structure, and a
+	            normal trace structure arises from an iterative, i.e. coalgebraic
+	            structure over terms and messages used in computation and
+	            communication. The correspondence is established using a convenient
+	            monadic description of normally traced monoidal categories.",
+	isbn = "978-3-642-32784-1",
+}
+
+
+@inbook{pavlovic-2014,
+	author = "Pavlovic, Dusko",
+	editor = "Casadio, Claudia and Coecke, Bob and Moortgat, Michael and Scott,
+	          Philip",
+	title = "Chasing Diagrams in Cryptography",
+	bookTitle = "Categories and Types in Logic, Language, and Physics: Essays
+	             Dedicated to Jim Lambek on the Occasion of His 90th Birthday",
+	year = "2014",
+	publisher = "Springer Berlin Heidelberg",
+	address = "Berlin, Heidelberg",
+	pages = "353--367",
+	abstract = "Cryptography is a theory of secret functions. Category theory is a
+	            general theory of functions. Cryptography has reached a stage where
+	            its structures often take several pages to define, and its formulas
+	            sometime run from page to page. Category theory has some
+	            complicated definitions as well, but one of its specialties is
+	            taming the flood of structure. Cryptography seems to be in need of
+	            high level methods, whereas category theory always needs concrete
+	            applications. So why is there no categorical cryptography? One
+	            reason may be that the foundations of modern cryptography are built
+	            from probabilistic polynomial-time Turing machines, and category
+	            theory does not have a good handle on such things. On the other
+	            hand, such foundational problems might be the very reason why
+	            cryptographic constructions often resemble low level machine
+	            programming. I present some preliminary explorations towards
+	            categorical cryptography. It turns out that some of the main
+	            security concepts are easily characterized through diagram chasing,
+	            going back to Lambek's seminal `Lecture Notes on Rings and
+	            Modules'.",
+	isbn = "978-3-642-54789-8",
+	doi = "10.1007/978-3-642-54789-8_19",
+	url = "https://doi.org/10.1007/978-3-642-54789-8_19",
+}
+
+
+@article{bkm-2019,
+	title = {Parallel Self-Testing of the GHZ State with a Proof by Diagrams},
+	volume = {287},
+	ISSN = {2075-2180},
+	url = {http://dx.doi.org/10.4204/EPTCS.287.3},
+	DOI = {10.4204/eptcs.287.3},
+	journal = {Electronic Proceedings in Theoretical Computer Science},
+	publisher = {Open Publishing Association},
+	author = {Breiner, Spencer and Kalev, Amir and Miller, Carl A.},
+	year = {2019},
+	month = jan,
+	pages = {43–66},
+}
+
+@article{bmr-2019,
+	doi = {10.22331/q-2019-05-27-146},
+	url = {https://doi.org/10.22331/q-2019-05-27-146},
+	title = {Graphical {M}ethods in {D}evice-{I}ndependent {Q}uantum {C}
+	         ryptography},
+	author = {Breiner, Spencer and Miller, Carl A. and Ross, Neil J.},
+	journal = {{Quantum}},
+	issn = {2521-327X},
+	publisher = {{Verein zur F{\"{o}}rderung des Open Access Publizierens in den
+	             Quantenwissenschaften}},
+	volume = {3},
+	pages = {146},
+	month = may,
+	year = {2019},
+}
+
+@article{coecke-perdrix-2012,
+	title = {Environment and classical channels in categorical quantum mechanics},
+	volume = {Volume 8, Issue 4},
+	ISSN = {1860-5974},
+	url = {http://dx.doi.org/10.2168/LMCS-8(4:14)2012},
+	DOI = {10.2168/lmcs-8(4:14)2012},
+	journal = {Logical Methods in Computer Science},
+	publisher = {Centre pour la Communication Scientifique Directe (CCSD)},
+	author = {Coecke, Bob and Perdrix, Simon},
+	year = {2012},
+	month = nov,
+}
+
+
+@book{coecke-kissinger-2017,
+	place = {Cambridge},
+	title = {Picturing Quantum Processes: A First Course in Quantum Theory and
+	         Diagrammatic Reasoning},
+	publisher = {Cambridge University Press},
+	author = {Coecke, Bob and Kissinger, Aleks},
+	year = {2017},
+} <div></div>
+
+
+@article{chitambar-gour-2019,
+	title = {Quantum resource theories},
+	author = {Chitambar, Eric and Gour, Gilad},
+	journal = {Rev. Mod. Phys.},
+	volume = {91},
+	issue = {2},
+	pages = {025001},
+	numpages = {48},
+	year = {2019},
+	month = {Apr},
+	publisher = {American Physical Society},
+	doi = {10.1103/RevModPhys.91.025001},
+	url = {https://link.aps.org/doi/10.1103/RevModPhys.91.025001},
+}
+
+@article{stay-vicary-2013,
+	title = {Bicategorical Semantics for Nondeterministic Computation},
+	journal = {Electronic Notes in Theoretical Computer Science},
+	volume = {298},
+	pages = {367-382},
+	year = {2013},
+	note = {Proceedings of the Twenty-ninth Conference on the Mathematical
+	        Foundations of Programming Semantics, MFPS XXIX},
+	issn = {1571-0661},
+	doi = {https://doi.org/10.1016/j.entcs.2013.09.022},
+	url = {https://www.sciencedirect.com/science/article/pii/S1571066113000686},
+	author = {Mike Stay and Jamie Vicary},
+	keywords = {Categories, security, geometry},
+	abstract = {We present a topological bicategorical syntax for the interaction
+	            between public and private information in classical information
+	            theory. This allows high-level graphical definitions of encrypted
+	            communication and secret sharing, including a characterization of
+	            their security properties, which are automatically satisfied with
+	            no extra axioms required. This analysis shows that these protocols
+	            have an identical abstract form to the quantum teleportation and
+	            dense coding procedures, giving a concrete mathematical analogy
+	            between quantum and classical computing. Specific implementations
+	            of these protocols as nondeterministic classical procedures are
+	            recovered by applying our formalism in a symmetric monoidal
+	            bicategory of matrices of relations.
+	            http://www.elsevier.nl/locate/entcs.},
+}
+
+@article{lambeck-1974,
+	title = {Functional completeness of cartesian categories},
+	author = {Lambek, Joachim},
+	journal = {Annals of Mathematical Logic},
+	volume = {6},
+	number = {3-4},
+	pages = {259--292},
+	year = {1974},
+	publisher = {North-Holland},
+}
+
+@article{lambeck-1980,
+	title = {From lambda-calculus to cartesian closed categories},
+	author = {Lambek, Joachim},
+	journal = {To HB Curry: essays on combinatory logic, lambda calculus and
+	           formalism},
+	pages = {375--402},
+	year = {1980},
+	publisher = {Academic Press London},
+}
+
+@inproceedings{lawvere-1969,
+	author = "Lawvere, F. William",
+	title = "Diagonal arguments and cartesian closed categories",
+	booktitle = "Category Theory, Homology Theory and their Applications II",
+	year = "1969",
+	publisher = "Springer Berlin Heidelberg",
+	address = "Berlin, Heidelberg",
+	pages = "134--145",
+	isbn = "978-3-540-36101-5",
+}
+
+
+@article{seely-1984,
+	title = {Locally cartesian closed categories and type theory},
+	volume = {95},
+	DOI = {10.1017/S0305004100061284},
+	number = {1},
+	journal = {Mathematical Proceedings of the Cambridge Philosophical Society},
+	author = {Seely, R. A. G.},
+	year = {1984},
+	pages = {33–48},
+}
+
+@article{seely-1989,
+	title = {Linear Logic, *-autonomous categories and Cofree Coalgebras},
+	DOI = {10.1090/conm/092/1003210},
+	journal = {Categories in Computer Science and Logic},
+	author = {Seely, R. A. G.},
+	year = {1989},
+	pages = {371–382},
+} 
+
+@book{crole-1994,
+	place = {Cambridge},
+	title = {Categories for Types},
+	publisher = {Cambridge University Press},
+	author = {Crole, Roy L.},
+	year = {1994},
+}
+@phdthesis{bauer-2000,
+	place = {Pittsburgh, PA},
+	journal = {The realizability approach to computable analysis and topology},
+	school = {School of Computer Science},
+	author = {Bauer, Andrej},
+	year = {2000},
+} 
