--- a/writeup/thesis.tex
+++ b/writeup/thesis.tex
@@ -76,9 +76,13 @@
 \chapter{Category Theory}
 \input{category-theory}
 
+\chapter{Categorical Cryptography}
+\input{categorical-cryptography.tex}
+
 \appendix
 \chapter{Computer Scientific Foundations}
 \input{theory.tex}
+
 
 \backmatter{}
 \nocite{*}
