--- a/writeup/references.bib
+++ b/writeup/references.bib
@@ -804,21 +804,21 @@
 	number = {6},
 	issn = {0001-0782},
 	url = {https://doi.org/10.1145/3812.3818},
-	doi = {10. author = {Even, Shimon and Goldreich, Oded and Lempel, Abraham},
-	       title = {A randomized protocol for signing contracts}, year = {1985},
-	       issue_date = {June 1985}, publisher = {Association for Computing
-	       Machinery}, address = {New York, NY, USA}, volume = {28}, number = {6},
-	       issn = {0001-0782}, url = {https://doi.org/10.1145/3812.3818}, doi = {
-	       10.1145/3812.3818}, abstract = {Randomized protocols for signing
-	       contracts, certified mail, and flipping a coin are presented. The
-	       protocols use a 1-out-of-2 oblivious transfer subprotocol which is
-	       axiomatically defined.The 1-out-of-2 oblivious transfer allows one party
-	       to transfer exactly one secret, out of two recognizable secrets, to his
-	       counterpart. The first (second) secret is received with probability one
-	       half, while the sender is ignorant of which secret has been received.An
-	       implementation of the 1-out-of-2 oblivious transfer, using any public
-	       key cryptosystem, is presented.}, journal = {Commun. ACM}, month = {jun}
-	       , pages = {637–647}, numpages = {11} },
+	doi = { 10.1145/3812.3818},
+	abstract = {Randomized protocols for signing contracts, certified mail, and
+	            flipping a coin are presented. The protocols use a 1-out-of-2
+	            oblivious transfer subprotocol which is axiomatically defined.The
+	            1-out-of-2 oblivious transfer allows one party to transfer exactly
+	            one secret, out of two recognizable secrets, to his counterpart.
+	            The first (second) secret is received with probability one half,
+	            while the sender is ignorant of which secret has been received.An
+	            implementation of the 1-out-of-2 oblivious transfer, using any
+	            public key cryptosystem, is presented.},
+	journal = {Commun. ACM},
+	month = {jun},
+	pages = {637–647},
+	numpages = {11},
+},
 }
 
 @article{shamir-1992,
@@ -859,16 +859,6 @@
 	            mechanics;Laboratories;Communication channels;Force
 	            measurement;Measurement standards},
 	doi = {10.1109/LICS.2004.1319636},
-}
-
-@article{heunen-vicary-2014,
-	title = {Introduction to categorical quantum mechanics},
-	author = {Heunen, Chris and Vicary, Jamie},
-	journal = {preprint},
-	year = {2014},
-	url = {
-	       https://www.cs.ox.ac.uk/people/jamie.vicary/IntroductionToCategoricalQuantumMechanics.pdf
-	       },
 }
 
 @inproceedings{hines-2020,
@@ -1109,6 +1099,7 @@
 	author = {Crole, Roy L.},
 	year = {1994},
 }
+
 @phdthesis{bauer-2000,
 	place = {Pittsburgh, PA},
 	journal = {The realizability approach to computable analysis and topology},
@@ -1116,3 +1107,124 @@
 	author = {Bauer, Andrej},
 	year = {2000},
 } 
+
+@inproceedings{giry-1982,
+	author = "Giry, Mich{\`e}le",
+	editor = "Banaschewski, B.",
+	title = "A categorical approach to probability theory",
+	booktitle = "Categorical Aspects of Topology and Analysis",
+	year = "1982",
+	publisher = "Springer Berlin Heidelberg",
+	address = "Berlin, Heidelberg",
+	pages = "68--85",
+	isbn = "978-3-540-39041-1",
+}
+
+@article{fritz-2020,
+	title = {A synthetic approach to Markov kernels, conditional independence and
+	         theorems on sufficient statistics},
+	volume = {370},
+	ISSN = {0001-8708},
+	url = {http://dx.doi.org/10.1016/j.aim.2020.107239},
+	DOI = {10.1016/j.aim.2020.107239},
+	journal = {Advances in Mathematics},
+	publisher = {Elsevier BV},
+	author = {Fritz, Tobias},
+	year = {2020},
+	month = aug,
+	pages = {107239},
+}
+
+@article{wadler-thiemann-2003,
+	author = {Wadler, Philip and Thiemann, Peter},
+	title = {The marriage of effects and monads},
+	year = {2003},
+	issue_date = {January 2003},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	volume = {4},
+	number = {1},
+	issn = {1529-3785},
+	url = {https://doi.org/10.1145/601775.601776},
+	doi = {10.1145/601775.601776},
+	abstract = {Gifford and others proposed an effect typing discipline to delimit
+	            the scope of computational effects within a program, while Moggi
+	            and others proposed monads for much the same purpose. Here we marry
+	            effects to monads, uniting two previously separate lines of
+	            research. In particular, we show that the type, region, and effect
+	            system of Talpin and Jouvelot carries over directly to an analogous
+	            system for monads, including a type and effect reconstruction
+	            algorithm. The same technique should allow one to transpose any
+	            effect system into a corresponding monad system.},
+	journal = {ACM Trans. Comput. Logic},
+	month = {jan},
+	pages = {1–32},
+	numpages = {32},
+	keywords = {Monad, effect, region, type, type reconstruction},
+}
+
+@inbook{altenrich-green-2009,
+	place = {Cambridge},
+	title = {The Quantum IO Monad},
+	booktitle = {Semantic Techniques in Quantum Computation},
+	publisher = {Cambridge University Press},
+	author = {Altenkirch, Thorsten and Green, Alexander S.},
+	editor = {Gay, Simon and Mackie, IanEditors},
+	year = {2009},
+	pages = {173–205},
+}
+
+@inproceedings{abramsky-2017,
+	author = {Abramsky, Samson and Barbosa, Rui Soares and de Silva, Nadish and
+	          Zapata, Octavio},
+	title = {{The Quantum Monad on Relational Structures}},
+	booktitle = {42nd International Symposium on Mathematical Foundations of
+	             Computer Science (MFCS 2017)},
+	pages = {35:1--35:19},
+	series = {Leibniz International Proceedings in Informatics (LIPIcs)},
+	ISBN = {978-3-95977-046-0},
+	ISSN = {1868-8969},
+	year = {2017},
+	volume = {83},
+	editor = {Larsen, Kim G. and Bodlaender, Hans L. and Raskin, Jean-Francois},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
+	address = {Dagstuhl, Germany},
+	URL = {
+	       https://drops-dev.dagstuhl.de/entities/document/10.4230/LIPIcs.MFCS.2017.35
+	       },
+	URN = {urn:nbn:de:0030-drops-81290},
+	doi = {10.4230/LIPIcs.MFCS.2017.35},
+	annote = {Keywords: non-local games, quantum computation, monads},
+}
+
+@book{nielsen-chuang-2010,
+	place = {Cambridge},
+	title = {Quantum Computation and Quantum Information: 10th Anniversary Edition
+	         },
+	publisher = {Cambridge University Press},
+	author = {Nielsen, Michael A. and Chuang, Isaac L.},
+	year = {2010},
+}
+
+@incollection{heunen-vicary-2014,
+	author = {Heunen, Chris and Vicary, Jamie},
+	isbn = {9780198739623},
+	title = "{1Basics}",
+	booktitle = "{Categories for Quantum Theory: An Introduction}",
+	publisher = {Oxford University Press},
+	year = {2019},
+	month = {11},
+	abstract = "{This book assumes familiarity with some basic ideas from category
+	            theory, linear algebra and quantum computing. This self-contained
+	            chapter gives a quick summary of the essential aspects of these
+	            areas, including categories, functors, natural transformations,
+	            vector spaces, Hilbert spaces, tensor products, density matrices,
+	            measurement and quantum teleportation.}",
+	doi = {10.1093/oso/9780198739623.003.0009},
+	url = {https://doi.org/10.1093/oso/9780198739623.003.0009},
+	eprint = {
+	          https://academic.oup.com/book/0/chapter/367235017/chapter-pdf/50991620/oso-9780198739623-chapter-9.pdf
+	          },
+}
+
+
